+ add slash command autocomplete support + make command arguments use it + command builders now have a canBeDisabled property + disabled command handler now uses one entry + BasicCommandsSerializer - CommandsSerializer